create main controller and main.html for listing

--- a/public/index.html
+++ b/public/index.html
@@ -47,6 +47,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
+    <!-- Bower Packets -->
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/angular-strap/dist/angular-strap.js"></script>
     <script src="bower_components/angular-strap/dist/angular-strap.tpl.js"></script>
@@ -56,6 +57,10 @@
     <script src="bower_components/angular-cookies/angular-cookies.js"></script>
     <script src="bower_components/moment/min/moment.min.js"></script>
     <script src="app.js"></script>
+    <!-- Controllers -->
+    <script src="controllers/main.js"></script>
+    <!-- Services -->
+    <script src="services/show.js"></script>
 </body>
 
 </html>
